# magnetite

./: .gitignore  Cargo.toml  schema.sql
src/: database.rs  hasher.rs  lib.rs  lookup.rs  main.rs
