[package]
name = "magnetite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
siphasher = "0.3"
bcrypt = "0.13"
warp = { version = "0.3", features = [ "tls" ] }
tokio-postgres = "0.7"
tokio = { version = "1.21", features = [ "full" ] }
thiserror = "1"
clap = { version = "3.2.20", features = ["derive"] }
rand = "0.8"
bytes = "1.2"
base64 = "0.13"
pretty_env_logger = "0.4"
log = "0.4"